# oxysound

./: .gitignore  Cargo.toml  LICENSE  README.md  test.json
.github/workflows/: rust_build.yml
src/: args.rs  config.rs  error.rs  lib.rs  main.rs  playlist.rs  prelude.rs  utils.rs  youtube_api.rs
