[package]
name = "oxysound"
version = "0.1.0"
authors = ["inkognitobo"]
edition = "2021"
description = "Rust powered command line tool to create account independent YouTube playlists"
repository = "https://github.com/inkognitobo/oxysound"
license = "MIT"
keywords = ["rust", "youtube", "playlist"]
categories = ["comand-line-utilities"]

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
confy = "0.5.1"
directories = "5.0.1"
dotenv = "0.15.0"
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["full"] }
